--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "^4.5.0"
